--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,11 @@ services:
     restart: unless-stopped
     env_file:
       - .env
+    environment:
+      - DATA_DIR=/app/data
     volumes:
       - ./downloads:/app/downloads
-      - ./white_list.txt:/app/white_list.txt
+      - ./data:/app/data
     logging:
       driver: "json-file"
       options:
