--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-aiogram
-mutagen
-asynco
-yt_dlp
-dotenv
+aiogram>=3.0.0
+mutagen>=1.47.0
+yt-dlp>=2023.10.0
+python-dotenv>=1.0.0
+aiosqlite>=0.19.0
